--- a/static/windows-95-ui-kit/css/w95.css
+++ b/static/windows-95-ui-kit/css/w95.css
@@ -13,11 +13,20 @@
 
 .bg-primary {
   background-image: url('../../img/play.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
   background-color: #c0c0c0 !important;
 }
 
 .bg-secondary {
   background-color: #008080 !important;
+  background-image: url('../../img/play.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
 .bg-tertiary {
