--- a/assets/windows-95-ui-kit/css/w95.css
+++ b/assets/windows-95-ui-kit/css/w95.css
@@ -26,7 +26,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  background-color: #008080;
+  background-color: #c7452e;
 }
 
 .bg-tertiary {
