--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -897,7 +897,7 @@
                       </div>
                     </div>
                     <div class="d-flex flex-column pl-4">
-                      <button class="btn btn-sm btn-block btn-primary" name="_submit" value="Submit">
+                      <button class="btn btn-sm btn-block btn-primary" name="_submit" value="Envoyer">
                         <span class="btn-text">OK</span>
                       </button>
                       <button class="btn btn-sm btn-block btn-primary" disabled>
@@ -1109,7 +1109,7 @@
                     <button class="btn btn-sm btn-primary" disabled>
                       <span class="btn-text">< Retour</span>
                     </button>
-                    <button class="btn btn-sm btn-primary" name="_submit" value="Submit">
+                    <button class="btn btn-sm btn-primary" name="_submit" value="Envoyer">
                       <span class="btn-text">Suivant ></span>
                     </button>
                   </div>
@@ -1144,7 +1144,7 @@
                 </div>
               </div>
 
-              <div class="d-flex flex-row justify-content-end mt-1"><a href="/scoreboard" class="btn btn-primary">View Full Scoreboard</a></div>
+              <div class="d-flex flex-row justify-content-end mt-1"><a href="/scoreboard" class="btn btn-primary">Voir le Scoreboard</a></div>
               {% cache 60, CacheKeys.PUBLIC_SCOREBOARD_TABLE %}
                 {% if scoreboard_standings %}
                   <!-- id="scoreboard" -->
@@ -1598,8 +1598,8 @@
                         </div>
                       </div>
                       <div class="d-flex flex-row flex-grow-1 justify-content-end">
-                        <button class="btn btn-sm btn-primary" id="_submit" name="_submit" type="submit" value="Submit">
-                          <span class="btn-text">Submit</span>
+                        <button class="btn btn-sm btn-primary" id="_submit" name="_submit" type="submit" value="Envoyer">
+                          <span class="btn-text">Envoyer</span>
                         </button>
                       </div>
                     </div>
@@ -1956,7 +1956,7 @@
     </div>
   <div class="row min-vh-25" x-show="solves.length === 0">
     <h3 class="opacity-50 text-center w-100 justify-content-center align-self-center">
-      No solves yet
+      Aucun flag
     </h3>
   </div>
 </div>
@@ -2355,7 +2355,7 @@
     {% else %}
       <div class="row min-vh-25">
         <h3 class="opacity-50 text-center w-100 justify-content-center align-self-center">
-          No solves yet
+          Aucun flag
         </h3>
       </div>
     {% endif %}
@@ -2568,7 +2568,7 @@
     {% else %}
       <div class="row min-vh-25">
         <h3 class="opacity-50 text-center w-100 justify-content-center align-self-center">
-          No solves yet
+          Aucun flag
         </h3>
       </div>
     {% endif %}
@@ -2749,7 +2749,7 @@
           />
         </div>
         <div class="d-flex flex-row justify-content-between mt-1">
-          <div @render-status-popup.window="desktop.createAlertPane({'title': 'Challenge Submit', 'type': response.data.status === 'correct'? 'success': 'error', 'content': response.data.message})">
+          <div @render-status-popup.window="desktop.createAlertPane({'title': 'Réponse du Challenge', 'type': response.data.status === 'correct'? 'success': 'error', 'content': response.data.message})">
           </div>
           <button
             id="${elem_id}_challenge-submit"
@@ -2758,7 +2758,7 @@
             @click.debounce.500ms="submitChallenge()"
             ${c.solved_by_me ? "disabled" : ""}
           >
-            <span class="btn-text">Submit</span>
+            <span class="btn-text">Envoyer</span>
           </button>
         </div>
       </div>
@@ -2887,7 +2887,7 @@
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <h2 class="modal-action text-center w-100">Edit Team</h2>
+            <h2 class="modal-action text-center w-100">Editer une équipe</h2>
             <button type="button" class="cursor-pointer btn-close" data-bs-dismiss="modal" aria-label="Close">
               <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close.png" alt="">
                 <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close_pressed.png" alt="">
@@ -2989,7 +2989,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h2 class="modal-action text-center w-100">Choose Captain</h2>
+            <h2 class="modal-action text-center w-100">Choisir un Capitaine</h2>
             <button type="button" class="cursor-pointer btn-close" data-bs-dismiss="modal" aria-label="Close">
               <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close.png" alt="">
                 <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close_pressed.png" alt="">
@@ -3013,8 +3013,8 @@
                       x-cloak="success"
                       x-show="success"
                   >
-                    <strong>Success!</strong>
-                    Your captain rights have been transferred
+                    <strong>Félicitations !</strong>
+                    Vos droits de capitaines sont maintenant délégué.
                     <button type="button" class="cursor-pointer btn-close" data-bs-dismiss="alert" aria-label="Close">
                       <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close.png" alt="">
                 <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close_pressed.png" alt="">
@@ -3022,7 +3022,7 @@
                   </div>
                   <template x-for="(msg, idx) in errors" :key="idx">
                     <div class="alert alert-danger alert-dismissible" role="alert">
-                      <span class="sr-only">Error:</span>
+                      <span class="sr-only">Erreur:</span>
                       <span x-text="msg"></span>
                       <button type="button" class="cursor-pointer btn-close" data-bs-dismiss="alert" aria-label="Close">
                         <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close.png" alt="">
@@ -3043,7 +3043,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h2 class="modal-action text-center w-100">Invite Users</h2>
+            <h2 class="modal-action text-center w-100">Inviter un Joueur</h2>
             <button type="button" class="cursor-pointer btn-close" data-bs-dismiss="modal" aria-label="Close">
               <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close.png" alt="">
                 <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close_pressed.png" alt="">
@@ -3064,10 +3064,7 @@
                   </div>
   
                   <small class="form-text text-muted">
-                    Share this link with your team members for them to join your team
-                  </small>
-                  <small class="form-text text-muted">
-                    Invite links can be re-used and expire after 1 day
+                    Utilisez ce lien pour partager l'accès à votre équipe.
                   </small>
                 </div>
               </form>
@@ -3081,14 +3078,14 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h2 class="modal-action text-center w-100">Disband Team</h2>
+            <h2 class="modal-action text-center w-100">Supprimer une équipe</h2>
             <button type="button" class="cursor-pointer btn-close" data-bs-dismiss="modal" aria-label="Close">
               <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close.png" alt="">
                 <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close_pressed.png" alt="">
             </button>
           </div>
           <div class="modal-body">
-            <p class="mb-0">Are you sure you want to disband your team?</p>
+            <p class="mb-0">Vous êtes sur de vouloir supprimer l'équipe ?</p>
   
             <div class="mt-3">
               <template x-for="(msg, idx) in errors" :key="idx">
@@ -3101,8 +3098,8 @@
   
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">No</button>
-            <button type="button" class="btn btn-primary" @click="disbandTeam()" :disabled="errors.length > 0">Yes</button>
+            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Non</button>
+            <button type="button" class="btn btn-primary" @click="disbandTeam()" :disabled="errors.length > 0">Oui</button>
           </div>
         </div>
       </div>
