--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -938,7 +938,7 @@
                           <p class="font-weight-bold ml-2 mt-2">Le saviez vous ?...</p>
                         </div>
                         <p>Nous avons un <a href="https://discord.gg/PytGqjq" target="_blank" rel="noopener noreferrer"> Discord !</a></p>
-                        <p>Cliquez sur Démarer > S'identifier... pour commencer le CTF.</p>
+                        <p>Cliquez sur Démarrer > S'identifier... pour commencer le CTF.</p>
                         <p>Si vous avez du mal avec ce thème, vous pouvez utiliser le thème par défaut <a href="/challenges" target="_blank" rel="noopener noreferrer">ici</a>.</p>
                       </div>
                     </template>
@@ -3173,7 +3173,7 @@
             </div>
             <a class="nav-link d-flex flex-row font-weight-bold" role="button" :class="{ 'pane-focused': $store.globals.show_start === true }" @click="desktop.markAllUnfocused(); $store.globals.show_start = !$store.globals.show_start">
               <img class="taskbar-icon" src="/themes/uiuctf-2023-ctfd-theme/static/img/uiuctf-2023-pwny.svg" />
-              <div>Démarer</div>
+              <div>Démarrer</div>
             </a>
           </li>
         </ul>
