--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -1505,6 +1505,258 @@
               
             }
 
+            async createTokenPane(params) {
+              const elem = `<div class="row">
+{% from "macros/forms.html" import render_extra_fields %}
+<div class="col-md-3 offset-md-1 mb-3 mb-md-0">
+  <div class="nav flex-column nav-pills" role="tablist">
+    <button
+        class="nav-link" id="settings-tokens-tab" data-bs-toggle="pill" data-bs-target="#tokens"
+        role="tab"
+    >Access Tokens
+    </button>
+  </div>
+</div>
+
+<div class="col-md-8">
+  <div class="tab-content" id="v-pills-tabContent">
+    <div class="tab-pane fade show active" id="profile" role="tabpanel">
+      {% include "components/errors.html" %}
+
+      {% with form = Forms.self.SettingsForm(country=settings_country) %}
+        <form
+            method="post" accept-charset="utf-8" autocomplete="off" role="form"
+            x-data="SettingsForm"
+            @submit.prevent="updateProfile()"
+            class="form-horizontal"
+        >
+
+          <div class="mb-3">
+            <b>{{ form.name.label(class="form-label") }}</b>
+            {{ form.name(class="form-control", value=settings_name) }}
+          </div>
+
+          <div class="mb-3">
+            <b>{{ form.email.label(class="form-label") }}</b>
+            {{ form.email(class="form-control", value=settings_email) }}
+          </div>
+
+          <hr>
+
+          <div class="mb-3">
+            <b>{{ form.confirm.label(class="form-label") }}</b>
+            {{ form.confirm(class="form-control") }}
+          </div>
+          <div class="mb-3">
+            <b>{{ form.password.label(class="form-label") }}</b>
+            {{ form.password(class="form-control") }}
+          </div>
+
+          <hr>
+
+          <div class="mb-3">
+            <b>{{ form.affiliation.label(class="form-label") }}</b>
+            {{ form.affiliation(class="form-control", value=settings_affiliation or "") }}
+          </div>
+          <div class="mb-3">
+            <b>{{ form.website.label(class="form-label") }}</b>
+            {{ form.website(class="form-control", value=settings_website or "") }}
+          </div>
+          <div class="mb-3">
+            <b>{{ form.country.label(class="form-label") }}</b>
+            {{ form.country(class="form-control form-select", value=settings_country) }}
+          </div>
+
+          <hr>
+
+          {{ render_extra_fields(form.extra) }}
+
+          <div id="results" class="mb-3">
+            <div
+                class="alert alert-success alert-dismissible submit-row" role="alert"
+                x-cloak="success" x-show="success"
+            >
+              <strong>Appliqué!</strong>
+              Votre profil vient d'être mis à jour.
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Fermer">
+                <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close.png" alt="">
+                <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close_pressed.png" alt="">
+              </button>
+            </div>
+
+
+            <template x-for="(msg, idx) in errors" :key="idx">
+              <div class="alert alert-danger alert-dismissible" role="alert">
+                <span class="sr-only">Erreur:</span>
+                <span x-text="msg"></span>
+                <button
+                    type="button" class="btn-close" data-bs-dismiss="alert"
+                    aria-label="Fermer"
+                >
+                <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close.png" alt="">
+                <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close_pressed.png" alt="">
+                </button>
+              </div>
+            </template>
+          </div>
+
+          <div class="mb-3">
+            {{ form.submit(class="btn btn-primary float-end px-4") }}
+          </div>
+        </form>
+      {% endwith %}
+    </div>
+
+    <div class="tab-pane fade" id="tokens" role="tabpanel">
+
+      {% with form = Forms.self.TokensForm() %}
+        <form method="POST" x-data="TokensForm" @submit.prevent="generateToken()" class="mb-3">
+          <div class="modal" tabindex="-1" x-ref="tokenModal">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Génération API Key</h5>
+                  <button
+                      type="button" class="btn-close" data-bs-dismiss="modal"
+                      aria-label="Close"
+                  ><img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close.png" alt="">
+                <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close_pressed.png" alt=""></button>
+                </div>
+
+                <div class="modal-body">
+                  <p>Copiez votre clé API, elle ne sera plus montré après ça!</p>
+
+                  <div class="input-group mb-3">
+                    <input
+                        type="text" class="form-control bg-white" x-ref="token"
+                        x-model="token" readonly
+                    >
+                    <button
+                        class="btn btn-outline-secondary px-3" type="button"
+                        @click="copyToken()"
+                    >
+                      <i class="fas fa-clipboard"></i>
+                    </button>
+                  </div>
+                </div>
+
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+                    <span class="btn-text">D'accord !</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="mb-3">
+            <b>{{ form.expiration.label(class="form-label") }}</b>
+            {{ form.expiration(class="form-control") }}
+          </div>
+
+          <div class="row">
+            <div class="col">
+              {{ form.submit(class="btn btn-block btn-primary float-end px-4") }}
+            </div>
+          </div>
+        </form>
+      {% endwith %}
+
+      {% if settings_tokens %}
+        <hr>
+
+        <h4 class="text-center mt-3">Active Tokens</h4>
+
+        {# This has to be wrapping the table modal, because div with modal will get pushed out
+           of the table and alpine ref will not work #}
+        <div x-data="Tokens">
+          <div
+              class="modal fade" x-ref="confirmModal" tabindex="-1" role="dialog"
+              aria-modal="true"
+          >
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Delete Token</h5>
+                  <button
+                      type="button" class="btn-close" data-bs-dismiss="modal"
+                      aria-label="Close"
+                  ><img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close.png" alt="">
+                <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win95-pane-control/close_pressed.png" alt="">
+                  </button>
+                </div>
+
+                <div class="modal-body">
+                  <p>Are you sure you want to delete this token?</p>
+                </div>
+
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
+                    <span class="btn-text">No</span>
+                  </button>
+                  <button
+                      type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                      @click="deleteSelectedToken()"
+                  >
+                    <span class="btn-text">Yes</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <table class="table table-striped">
+            <thead>
+            <tr>
+              <td class="text-center"><b>Created</b></td>
+              <td><b>Expiration</b></td>
+              <td><b>Delete</b></td>
+            </tr>
+            </thead>
+            <tbody>
+            {% for token in settings_tokens %}
+              <tr x-ref="token-{{ token.id }}">
+                <td class="text-center">
+                  <span x-text="'{{ token.created.strftime('%Y-%m-%d %H:%M') }}'" data-time="{{ token.created | isoformat }}"></span>
+                </td>
+                <td>
+                  <span x-text="'{{ token.created.strftime('%Y-%m-%d %H:%M') }}'" data-time="{{ token.expiration | isoformat }}"></span>
+                </td>
+                <td class="text-center">
+                  <span
+                      class="delete-token" role="button"
+                      @click="deleteTokenModal({{ token.id }})">
+                      Delete
+                  </span>
+                </td>
+              </tr>
+            {% endfor %}
+
+            </tbody>
+          </table>
+        </div>
+      {% endif %}
+
+    </div>
+  </div>
+</div>
+</div>`
+              this.createPane({
+                name: "settings",
+                title: "Token",
+                taskbar_title: "Token",
+                recreate: 'createTokenPane',
+                initial_body_elem: elem,
+                icon_path: "/themes/uiuctf-2023-ctfd-theme/static/img/win98-icons/users_key-1.png",
+                hide_close: false,
+                width: "400px",
+                height: "400px",
+                transform: "translate(100px, 100px)",
+                ...params
+              });
+              
+            }
+
             async createConfirmClosePane(params) {
               this.createPane({
                 name: "close",
