--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -1742,9 +1742,9 @@
 </div>
 </div>`
               this.createPane({
-                name: "settings",
-                title: "Token",
-                taskbar_title: "Token",
+                name: "tokengen",
+                title: "Token API",
+                taskbar_title: "Token API",
                 recreate: 'createTokenPane',
                 initial_body_elem: elem,
                 icon_path: "/themes/uiuctf-2023-ctfd-theme/static/img/win98-icons/users_key-1.png",
