--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -3439,7 +3439,7 @@
                       Mon Equipe
                     </span>
                   </div>
-                  <div style="border-bottom: 1px solid #808080"  @click="desktop.createInfoPane()">
+                  <div @click="desktop.createInfoPane()">
                     <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win98-icons/help_book_big-1.png" />
                     <span>
                       Informations
@@ -3452,12 +3452,12 @@
                     </span>
                   </div>
                   <div x-show="$store.globals.user !== null"  style="border-top: 1px solid #ffffff" @click="desktop.createTokenPane()"">
-                    <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win98-icons/user_key-1.png" />
+                    <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win98-icons/users_key-1.png" />
                     <span>
                       Token API
                     </span>
                   </div>
-                  <div x-show="$store.globals.user !== null"  style="border-top: 1px solid #ffffff" @click="desktop.createSettingsPane()"">
+                  <div x-show="$store.globals.user !== null"   @click="desktop.createSettingsPane()"">
                     <img src="/themes/uiuctf-2023-ctfd-theme/static/img/win98-icons/settings_gear-1.png" />
                     <span>
                       Paramètres
