--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -1509,6 +1509,8 @@
               const elem = `<div class="row">
 {% from "macros/forms.html" import render_extra_fields %}
 
+  <div class="tab-content" id="v-pills-tabContent">
+    <div class="tab-pane fade show active" id="tokens" role="tabpanel">
 
       {% with form = Forms.self.TokensForm() %}
         <form method="POST" x-data="TokensForm" @submit.prevent="generateToken()" class="mb-3">
@@ -1638,7 +1640,8 @@
         </div>
       {% endif %}
 
-
+    </div>
+  </div>
 </div>`
               this.createPane({
                 name: "tokengen",
