--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -1509,7 +1509,7 @@
               const elem = `<div class="row">
 {% from "macros/forms.html" import render_extra_fields %}
 
-  <div class="tab-content" id="v-pills-tabContent">
+<div class="col-md-8">
     <div class="tab-pane fade show active" id="tokens" role="tabpanel">
 
       {% with form = Forms.self.TokensForm() %}
@@ -1641,7 +1641,7 @@
       {% endif %}
 
     </div>
-  </div>
+</div>
 </div>`
               this.createPane({
                 name: "tokengen",
