--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -929,7 +929,7 @@
             createInfoPane(params) {
               const elem = `
               <div class="d-flex flex-column h-100 w-100 overflow-hidden" x-data="{selected: 'about'}">
-                <h5>Bienvenue au <b>l'Oteria Cyber Cup 2024</b></h5>
+                <h5>Bienvenue à <b>l'Oteria Cyber Cup 2024</b></h5>
                 <div class="d-flex flex-row w-100 mt-3" style="height: calc(100% - 2.75rem);">
                   <div class="info-panel d-flex flex-column flex-grow-1 p-3 overflow-auto">
                     <template x-if="selected == 'about'">
@@ -1257,11 +1257,6 @@
         class="nav-link active" id="settings-profile-tab" data-bs-toggle="pill"
         data-bs-target="#profile" role="tab"
     >Profile
-    </button>
-    <button
-        class="nav-link" id="settings-tokens-tab" data-bs-toggle="pill" data-bs-target="#tokens"
-        role="tab"
-    >Access Tokens
     </button>
   </div>
 </div>
