--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -2999,8 +2999,12 @@
                   this.createAlertPane({"title": "Identifié !", "type": "success", "content": "Bienvenue à l'Oteria Cyber Cup 2024."})
                 }
                 location.reload();
+              } else if (error.includes('participer')) {
+                this.createAlertPane({"title": "Identifié !", "type": "success", "content": "Bienvenue à l'Oteria Cyber Cup 2024. N'oubliez pas de rejoindre une équipe !"})
+                location.reload();
               } else if (!!error) {
                 this.createAlertPane({"title": 'Erreur', "content": error});
+                location.reload();
               }
             }
 
