--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -990,7 +990,8 @@
                             style="display: grid; gap: 16px; grid-template-columns: repeat(auto-fit, minmax(64px, 96px));"
                             x-data="{people: [
                               { name:'Rhenar (Hugo)', img:'https://avatars.githubusercontent.com/u/15929760', href:'https://github.com/rhenar0' },
-                              { name:'Blusomething (Joris)', img:'https://avatars.githubusercontent.com/u/71839744', href:'https://github.com/jorisvey' }
+                              { name:'Blusomething (Joris)', img:'https://avatars.githubusercontent.com/u/71839744', href:'https://github.com/jorisvey' },
+                              { name:'Wardenfar (Théo)', img:'https://avatars.githubusercontent.com/u/20862992', href:'https://github.com/Wardenfar' }
                             ]}"
                             x-init="people.sort((a, b) => 0.5 - Math.random())"
                           >
