--- a/assets/windows-95-ui-kit/css/w95.css
+++ b/assets/windows-95-ui-kit/css/w95.css
@@ -10,6 +10,22 @@
   overflow: visible !important;
 }
 
+.card-body * {
+  overflow: visible !important;
+}
+
+.w95-input-border * {
+  overflow: visible !important;
+}
+
+.challenge-input form-control * {
+  overflow: visible !important;
+}
+
+.form-control * {
+  overflow: visible !important;
+}
+
 /**
  * = Backgrounds
  */
