--- a/static/windows-95-ui-kit/css/w95.css
+++ b/static/windows-95-ui-kit/css/w95.css
@@ -14,6 +14,22 @@
   overflow: visible !important;
 }
 
+.card-body * {
+  overflow: visible !important;
+}
+
+.w95-input-border * {
+  overflow: visible !important;
+}
+
+.challenge-input form-control * {
+  overflow: visible !important;
+}
+
+.form-control * {
+  overflow: visible !important;
+}
+
 .bg-primary {
   background-image: url('../../img/play.jpg') !important;
   background-position: center;
