--- a/static/windows-95-ui-kit/w95.css
+++ b/static/windows-95-ui-kit/w95.css
@@ -18,7 +18,7 @@
   overflow: visible !important;
 }
 
-.challenge-input form-control * {
+.challenge-input * {
   overflow: visible !important;
 }
 
