--- a/static/windows-95-ui-kit/css/w95.css
+++ b/static/windows-95-ui-kit/css/w95.css
@@ -14,7 +14,7 @@
   overflow: visible !important;
 }
 
-.card-body * {
+.card-body {
   overflow: visible !important;
 }
 
@@ -22,7 +22,7 @@
   overflow: visible !important;
 }
 
-.challenge-input form-control * {
+.challenge-input * {
   overflow: visible !important;
 }
 
