--- a/templates/desktop.html
+++ b/templates/desktop.html
@@ -1090,7 +1090,7 @@
 
                 {% from "macros/forms.html" import render_extra_fields %}
                 <form class="d-flex flex-column h-100 w-100 user-select-none" method="post" accept-charset="utf-8" autocomplete="off" role="form" @submit.prevent="desktop.doRegisterForm($event)">
-                  <div class="flex-grow-1">
+                  <div class="flex-grow-1 overflow-hidden">
                     <div class="d-flex flex-row h-100">
                       <img src="/themes/uiuctf-2023-ctfd-theme/static/img/register-sidebar.jpg">
                       <div class="d-flex flex-column flex-grow-1 px-3 py-2">
